# Lang_chain_smith

./: pyproject.toml
02-workflows/: 02-03-tool-augmentation.py  async_call.py  bacis_batch_invoke.py  basicEval.py  basic_chat_prompt_template.py  basic_prompt_template.py  basic_pydentic.py.py  chatPT.py  config.py  error_detection.py  fewshotPT.py  finance_agent.py  graph.py  hookingLifecycle.py  memory.py  messages.py  structured_output.py.py  tokens.py
