[project]
name = "advanced-langgraph-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "attrs==26.1.0",
    "certifi==2026.5.20",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "cryptography==49.0.0",
    "distro==1.9.0",
    "griffelib==2.0.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "idna==3.18",
    "jiter==0.15.0",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "langchain==1.3.9",
    "langchain-core==1.4.7",
    "langchain-openai==1.3.2",
    "langchain-protocol==0.0.17",
    "langgraph==1.2.5",
    "langgraph-checkpoint==4.1.1",
    "langgraph-prebuilt==1.1.0",
    "langgraph-sdk==0.4.2",
    "langsmith==0.8.15",
    "mcp==1.27.2",
    "openai==2.41.1",
    "openai-agents==0.17.5",
    "orjson==3.11.9",
    "ormsgpack==1.12.2",
    "packaging==26.2",
    "pycparser==3.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pydantic-settings==2.14.1",
    "pyjwt==2.13.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.32",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "regex==2026.5.9",
    "requests==2.34.2",
    "requests-toolbelt==1.0.0",
    "rpds-py==2026.5.1",
    "sniffio==1.3.1",
    "sse-starlette==3.4.4",
    "starlette==1.3.1",
    "tenacity==9.1.4",
    "tiktoken==0.13.0",
    "tqdm==4.68.2",
    "types-requests==2.33.0.20260518",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.7.0",
    "uuid-utils==0.16.0",
    "uvicorn==0.49.0",
    "websockets==15.0.1",
    "xxhash==3.7.0",
    "zstandard==0.25.0",
]
